some html tags added for trining on Emmet

--- a/main.css
+++ b/main.css
@@ -3,3 +3,8 @@ div{
     height: 100px;
     background-color: chocolate;
 }
+.happiness{
+    color: red;
+    font-size: 400px;
+    margin-left: 400px;
+}
